2008-06-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/cmds/ipmi-sensor-cmds.c: Make "sensor_state",
	"sensor_state1", "sensor_state2", and "reserved2".

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c:
	Adjust for change.

	* ipmi-sensors/src/ipmi-sensors-reading.c: Adjust for change.

	* configure.ac: Update version.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c: Code cleanup.

	* libfreeipmi/src/cmds/ipmi-sensor-cmds.c: Make
	tmpl_cmd_get_sensor_reading_rs sensor_state field length variable,
	not fixed.

2008-06-02  Albert Chu <chu11@llnl.gov>

 	* ipmi-sensors/src/ipmi-sensors-reading.c: Support optional sensor
 	state fields as stated in IPMI spec.  Support workaround for Dell
 	no sensor-state returned issue.
 
 	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c:
 	Support workaround for Dell no sensor-state returned issue.

        * common/src/tool-fiid-wrappers.h (_FIID_OBJ_LEN_BYTES): New
        macro.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_reading): Change internal API so that return value -1
	= error, 0 = unreadable sensor reading, 1 = sensor reading
	success.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_threshold_sensor_reading, _digital_sensor_reading,
	_specific_sensor_reading): Re-work with new interface call to
	_get_sensor_reading.
	
2008-06-02  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c
	(_get_sensor_specific_event_message_list,
	_get_generic_event_message_list, _get_threshold_message_list),
	ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_output_event_message_list): Change internal API so
	that NULL event_message_list means "Unknown" reading.  Event
	message list creation responsible for storing "OK" event message
	when appropriate.
